Tried to fix jumping animation

--- a/public/styles/structure.less
+++ b/public/styles/structure.less
@@ -118,8 +118,8 @@ body {
       text-align: left;
 
       @media @laptop, @tablet {
-        float: right;
-        margin: 0 25px 0 auto;
+        // float: right;
+        // margin: 0 25px 0 auto;
         max-width: 350px;
       }
 
